[package]
name = "HMSClipTest-rs"
version = "0.1.0"
edition = "2024"
description = "HTTP POST 请求测试工具库"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
regex = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
md-5 = "0.10"
hex = "0.4"
digest_auth = "0.3.1"  # 添加成熟的Digest认证库
anyhow = "1.0"  # 添加anyhow库用于错误处理
rusqlite = "0.29" # <-- 新增：SQLite 依赖，用于记录请求

[dev-dependencies]
mockito = "1.2"
