[package]
name = "HMSClipTest-rs"
version = "0.1.0"
edition = "2024"
description = "HTTP POST 请求测试工具库"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1.0.145", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"
regex = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
md-5 = "0.10"
hex = "0.4"
digest_auth = "0.3.1"  # 添加成熟的Digest认证库
anyhow = "1.0"  # 添加anyhow库用于错误处理
rusqlite = { version = "0.29", features = ["bundled"] } # <-- 使用bundled SQLite功能
async-trait = "0.1.89"
quick-xml = { version = "0.31", features = ["serialize", "overlapped-lists"] }
bytes = "1.10.1"

[dev-dependencies]
mockito = "1.2"
